# LIACS

./: .gitignore  README.md
year3/CoCo/compilerconstruction-assignment/: README.md  meson.build  meson_options.txt
year3/CoCo/compilerconstruction-assignment/docs/: MESON.md
year3/CoCo/compilerconstruction-assignment/src/general/: meson.build
year3/CoCo/compilerconstruction-assignment/src/general/src/main/: meson.build
year3/CoCo/compilerconstruction-assignment/src/grammar/: meson.build
year3/CoCo/compilerconstruction-assignment/src/grammar/src/main/: meson.build
year3/CoCo/compilerconstruction-assignment/src/intermediate-code/: meson.build
year3/CoCo/compilerconstruction-assignment/src/intermediate-code/src/main/: meson.build
year3/CoCo/compilerconstruction-assignment/src/machine-code/: meson.build
year3/CoCo/compilerconstruction-assignment/src/machine-code/src/main/: meson.build
year3/CoCo/compilerconstruction-assignment/src/testutils/: meson.build
year3/CoCo/compilerconstruction-assignment/src/testutils/src/main/: meson.build
year3/CoCo/compilerconstruction-assignment/subprojects/: filesystem.wrap  subprocess.wrap
year3/CoCo/compilerconstruction-assignment/subprojects/filesystem-1.5.12/: meson.build
year3/CoCo/compilerconstruction-assignment/subprojects/mpark_variant/: README.md  meson.build
year3/CoCo/compilerconstruction-assignment/subprojects/mpark_variant/include/mpark/: in_place.h  lib.h  variant.h
year3/CoCo/compilerconstruction-assignment/subprojects/pico_sha2_vendored/: meson.build
year3/CoCo/compilerconstruction-assignment/subprojects/subprocess/: .gitignore  README.md  meson.build
year3/CoCo/compilerconstruction-assignment/subprojects/subprocess/src/: meson.build
year3/CoCo/compilerconstruction-assignment/subprojects/subprocess/subprojects/: filesystem.wrap  mpark_variant.wrap
year3/CoCo/compilerconstruction-assignment/subprojects/win-flex-bison-binaries-2.5.18_vendored/: LICENSE
year3/CoCo/compilerconstruction-assignment/test/ass1/simple_expressions/expr0/: expr0.c  expr0.io
year3/CoCo/compilerconstruction-assignment/test/ass1/simple_expressions/expr1/: expr1.c  expr1.io
year3/CoCo/compilerconstruction-assignment/test/ass1/simple_expressions/expr10/: expr10.io
year3/CoCo/compilerconstruction-assignment/test/ass1/simple_expressions/expr11/: expr11.c  expr11.io
year3/CoCo/compilerconstruction-assignment/test/ass1/simple_expressions/expr12/: expr12.c  expr12.io
year3/CoCo/compilerconstruction-assignment/test/ass1/simple_expressions/expr13/: expr13.c  expr13.io
year3/CoCo/compilerconstruction-assignment/test/ass1/simple_expressions/expr14/: expr14.c  expr14.io
year3/CoCo/compilerconstruction-assignment/test/ass1/simple_expressions/expr15/: expr15.c  expr15.io
year3/CoCo/compilerconstruction-assignment/test/ass1/simple_expressions/expr16/: expr16.c  expr16.io
year3/CoCo/compilerconstruction-assignment/test/ass1/simple_expressions/expr17/: expr17.c  expr17.io
year3/CoCo/compilerconstruction-assignment/test/ass1/simple_expressions/expr18/: expr18.c  expr18.io
year3/CoCo/compilerconstruction-assignment/test/ass1/simple_expressions/expr19/: expr19.c
year3/CoCo/compilerconstruction-assignment/test/ass1/simple_expressions/expr2/: expr2.c
year3/CoCo/compilerconstruction-assignment/test/ass1/simple_expressions/expr3/: expr3.c  expr3.io
year3/CoCo/compilerconstruction-assignment/test/ass1/simple_expressions/expr4/: expr4.c  expr4.io
year3/CoCo/compilerconstruction-assignment/test/ass1/simple_expressions/expr5/: expr5.c  expr5.io
year3/CoCo/compilerconstruction-assignment/test/ass1/simple_expressions/expr6/: expr6.c
year3/CoCo/compilerconstruction-assignment/test/ass1/simple_expressions/expr7/: expr7.c  expr7.io
year3/CoCo/compilerconstruction-assignment/test/ass1/simple_expressions/expr8/: expr8.c  expr8.io
year3/CoCo/compilerconstruction-assignment/test/ass1/simple_expressions/expr9/: expr9.c  expr9.io
year3/CoCo/compilerconstruction-assignment/test/ass2/simple_expressions/if0/: if0.c  if0.io
year3/CoCo/compilerconstruction-assignment/test/ass2/simple_expressions/if1/: if1.c  if1.io
year3/CoCo/compilerconstruction-assignment/test/ass2/simple_expressions/if10/: if10.c  if10.io
year3/CoCo/compilerconstruction-assignment/test/ass2/simple_expressions/if11/: if11.c  if11.io
year3/CoCo/compilerconstruction-assignment/test/ass2/simple_expressions/if12/: if12.c  if12.io
year3/CoCo/compilerconstruction-assignment/test/ass2/simple_expressions/if13/: if13.c  if13.io
year3/CoCo/compilerconstruction-assignment/test/ass2/simple_expressions/if14/: if14.c  if14.io
year3/CoCo/compilerconstruction-assignment/test/ass2/simple_expressions/if15/: if15.c  if15.io
year3/CoCo/compilerconstruction-assignment/test/ass2/simple_expressions/if16/: if16.c  if16.io
year3/CoCo/compilerconstruction-assignment/test/ass2/simple_expressions/if17/: if17.c
year3/CoCo/compilerconstruction-assignment/test/ass2/simple_expressions/if18/: if18.c  if18.io
year3/CoCo/compilerconstruction-assignment/test/ass2/simple_expressions/if19/: if19.c  if19.io
year3/CoCo/compilerconstruction-assignment/test/ass2/simple_expressions/if2/: if2.c  if2.io
year3/CoCo/compilerconstruction-assignment/test/ass2/simple_expressions/if3/: if3.c  if3.io
year3/CoCo/compilerconstruction-assignment/test/ass2/simple_expressions/if4/: if4.c  if4.io
year3/CoCo/compilerconstruction-assignment/test/ass2/simple_expressions/if5/: if5.c  if5.io
year3/CoCo/compilerconstruction-assignment/test/ass2/simple_expressions/if6/: if6.c  if6.io
year3/CoCo/compilerconstruction-assignment/test/ass2/simple_expressions/if7/: if7.c  if7.io
year3/CoCo/compilerconstruction-assignment/test/ass2/simple_expressions/if8/: if8.c  if8.io
year3/CoCo/compilerconstruction-assignment/test/ass2/simple_expressions/if9/: if9.c  if9.io
year3/CoCo/compilerconstruction-assignment/test/ass3/simple_expressions/types0/: types0.c  types0.io
year3/CoCo/compilerconstruction-assignment/test/ass3/simple_expressions/types1/: types1.c  types1.io
(+1377 files in other folders)
