# Top-level headers
subprocess_files += files(
    'cpp/subprocess/environ.cpp',
    'cpp/subprocess/pipe.cpp',
    'cpp/subprocess/PipeVar.cpp',
    'cpp/subprocess/ProcessBuilder.cpp',
    'cpp/subprocess/ProcessBuilder_posix.cpp',
    'cpp/subprocess/ProcessBuilder_windows.cpp',
    'cpp/subprocess/shell_utils.cpp',
    'cpp/subprocess/utf8_to_utf16.cpp'
    )