libintermediate_files += files(
    'cpp/intermediatecode/ioperator/ioperator.cpp',
    'cpp/intermediatecode/intermediatecode.cpp',
    'cpp/intermediatecode/icgenerators/icgenerator.cpp',
    'cpp/intermediatecode/icgenerators/assignment1/calculator.cpp',
    'cpp/intermediatecode/icgenerators/assignment2/conditionals.cpp',
    'cpp/intermediatecode/icgenerators/assignment3/types.cpp',
    'cpp/intermediatecode/icgenerators/assignment4/divmod.cpp',
)