libmachine_files += files(
    'cpp/instruction/instruction.cpp',
    'cpp/instruction/moperator/moperator.cpp',
    'cpp/machinecode/machinecode.cpp',
    'cpp/machinecode/machinecode_printer.cpp',
    'cpp/machinecode/mcgenerators/mcgenerator.cpp',
    'cpp/machinecode/mcgenerators/assignment1/calculator.cpp',
    'cpp/machinecode/mcgenerators/assignment2/conditionals.cpp',
    'cpp/machinecode/mcgenerators/assignment3/types.cpp',
    'cpp/machinecode/mcgenerators/assignment4/divmod.cpp',
    'cpp/registerallocators/betterregisterallocator.cpp',
    'cpp/stackallocators/betterstackallocator.cpp'
)